# digitalocean-dyn-dns

./: Cargo.toml  README.md  release.ps1  release.sh
.github/workflows/: audit.yml  pull_request.yml  release.yml
src/: cli.rs  digitalocean.rs  ip_retriever.rs  main.rs
src/digitalocean/: api.rs  dns.rs  droplet.rs  error.rs  firewall.rs  kubernetes.rs  loadbalancer.rs  mod.rs
