[package]
name = "digitalocean-dyn-dns"
version = "0.1.0"
authors = ["Chris Lieb <chris.lieb@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
clap = { version = "~4.5", features = [ "cargo", "env" ] }
reqwest = { version = "~0.12", features = [ "rustls-tls", "blocking", "json" ], default-features = false }
serde = { version = "~1.0", features = [ "derive" ] }
serde_json = "~1.0.145"
tracing = "~0.1.43"
tracing-subscriber = "~0.3.22"
url = "~2.5.7"

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "~0.50.3"

[dev-dependencies]
approx = "~0.5.1"
mockito = "~1.7.1"
